--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "morgan": "^1.10.0"
+    "express": "^5.1.0"
   }
 }
